# Robot

./: .gitignore  CMakeLists.txt  Constants.h  Constants.hpp  Field.cpp  Field.h  Field.hpp  LICENSE  Point.cpp  Point.h  Point.hpp  README.md  Window.cpp  Window.h  Window.hpp  ideas.md  main.cpp
fields/: curlyField.txt  smallField.txt  smallMultiple.txt  stopField.txt
